--- a/src/components/Club/Club.css
+++ b/src/components/Club/Club.css
@@ -1,6 +1,6 @@
 .club-container {
   min-height: 100vh;
-  width: 100%;
+  width: 100vw;
   background-color: rgba(12, 12, 29, 0.8);
   padding: 100px 20px 50px;
   display: flex;
