--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -92,8 +92,10 @@
 /* Carousel Styles */
 .carousel-container {
   width: 90%;
+  height: 100%;
   max-width: 1000px; /* Increased max-width */
-  margin-top: 2rem; /* Added margin-top */
+  margin-top: 2rem; 
+  max-height: 1000px;/* Added margin-top */
 }
 
 .carousel-slide {
@@ -102,7 +104,8 @@
 
 .carousel-slide img {
   width: 100%;
-  height: auto;
+  height: 100%;
+ max-height: 1000px;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
